--- a/dssrc/python/supervisord.conf
+++ b/dssrc/python/supervisord.conf
@@ -36,7 +36,7 @@ password=mds!@34               ; default is no password (open server)
 ;  by default (see the username= and password= options to add authentication).
 ;  Never expose the inet HTTP server to the public internet.
 
-;[inet_http_server]         ; inet (TCP) server disabled by default
+[inet_http_server]         ; inet (TCP) server disabled by default
 port=*:8000                ; ip_address:port specifier, *:port for all iface
 username=dmnmds              ; default is no username (open server)
 password=mds!@34               ; default is no password (open server)
@@ -171,7 +171,7 @@ password=mds!@34                ; should be same as in [*_http_server] if set
 
 [program:AA_KMS_API]
 command=/usr/bin/bash /application/mds/dssrc/python/start_kmv_8888.sh
-autostart=false
-autorestart=false
+autostart=true
+autorestart=true
 stderr_logfile=/tmp/svd_mkms_web1.err.log
 stdout_logfile=/tmp/svd_mkms_web1.out.log
